Gastcollege/Kubernetes/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: weatherapp
  labels:
    app: weatherapp
spec:
  containers:
    - name: weatherapp-container
      image: weatherapp:latest
      imagePullPolicy: Never
      resources:
        limits:
          cpu: "250m"
          memory: "500Mi"
      ports:
        - containerPort: 80
