Gastcollege/Kubernetes/ClusterIpService.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
spec:
  selector:
    app: weatherapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
