Gastcollege/Kubernetes/weatherapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    app: weatherapp
