Gastcollege/Kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: weatherapp-service
                port:
                  number: 80
